# embedded

./: .gitignore  .gitmodules  LICENSE  README.md
backends/: CMakeLists.txt
backends/cmake/: add_executable_hook.cmake  arm-none-eabi-gcc.cmake  compile_flag_helper.cmake  copy_hal_files_helper.cmake  embedded.cmake  embedded_library.cmake  mcus.cmake  project.cmake  supported_architecture.cmake
backends/common/: CMakeLists.txt  (+3 more)
backends/stm32/: CMakeLists.txt  project_stm32f051.cmake  project_stm32f100.cmake  project_stm32f103.cmake  project_stm32f407.cmake
backends/stm32/generic_code/: CMakeLists.txt
backends/stm32/generic_code/stm32f1/cmake/: stm32f10x.cmake
backends/stm32/generic_code/stm32f1/hal/: hal_stm32f1_clock.cpp  hal_stm32f1_extint.cpp  hal_stm32f1_extint.hpp  hal_stm32f1_gpio.cpp  hal_stm32f1_gpio.hpp  hal_stm32f1_pwm.cpp  hal_stm32f1_pwm.hpp  hal_stm32f1_spi.hpp  hal_stm32f1_timer.cpp  hal_stm32f1_timer.hpp  hal_stm32f1_uart.cpp  hal_stm32f1_uart.hpp
backends/stm32/generic_code/stm32f1/system_files/: stm32_flash.ld  stm32f10x_conf.h
backends/stm32/generic_code/stm32fx/cmake/: stm32fx.cmake
backends/stm32/generic_code/stm32fx/hal/stm32fx/: usart_conf.hpp
backends/stm32/generic_code/stm32fx/system_files/: stm32_flash.ld  syscall.c
backends/stm32/hal/: hal_stm32.hpp  hal_stm32_clock.cpp  hal_stm32_extint.cpp  hal_stm32_extint.hpp  hal_stm32_gpio.cpp  hal_stm32_gpio.hpp  hal_stm32_i2c.cpp  hal_stm32_i2c.hpp  hal_stm32_pwm.cpp  hal_stm32_pwm.hpp  hal_stm32_spi.cpp  hal_stm32_spi.hpp  hal_stm32_timer.cpp  hal_stm32_timer.hpp  hal_stm32_uart.cpp  hal_stm32_uart.hpp
backends/stm32/include/: spi_conf.hpp  usart_conf.hpp
backends/stm32/stm32f0/: CMakeLists.txt
backends/stm32/stm32f0/hal/: hal_stm32f0_clock.cpp  hal_stm32f0_gpio.cpp  hal_stm32f0_gpio.hpp  hal_stm32f0_i2c.cpp  hal_stm32f0_i2c.hpp  hal_stm32f0_spi.cpp  hal_stm32f0_spi.hpp  hal_stm32f0_timer.cpp  hal_stm32f0_timer.hpp  hal_stm32f0_uart.cpp  hal_stm32f0_uart.hpp
backends/stm32/stm32f0/system_files/STM32F0xx_StdPeriph_Lib_V1.3.1/Libraries/STM32F0xx_StdPeriph_Driver/src/: stm32f0xx_dac.c
backends/stm32/stm32f1/: CMakeLists.txt
backends/stm32/stm32f1/hal/: hal_stm32f1_clock.cpp  hal_stm32f1_extint.cpp  hal_stm32f1_extint.hpp  hal_stm32f1_gpio.cpp  hal_stm32f1_gpio.hpp  hal_stm32f1_pwm.cpp  hal_stm32f1_timer.cpp  hal_stm32f1_uart.cpp  hal_stm32f1_uart.hpp
backends/stm32/stm32f1/system_files/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: system_stm32f10x.c
backends/stm32/stm32f100/cmake/: stm32f100.cmake
backends/stm32/stm32f100/hal/: hal_stm32f100_led.hpp  hal_stm32f100_pinout.cpp
backends/stm32/stm32f103/cmake/: stm32f103.cmake
backends/stm32/stm32f103/system_files/: startup_stm32f10x_md_vl.s  system_stm32f10x.c
backends/stm32/stm32f4/: CMakeLists.txt
backends/stm32/stm32f4/cmake/: stm32f4.cmake
backends/stm32/stm32f4/hal/: hal_stm32f4_clock.cpp  hal_stm32f4_spi.hpp  hal_stm32f4_uart.hpp
backends/stm32/stm32f4/system_files/: interruption.cpp  stm32_flash.ld
board_examples/: CMakeLists.txt
board_examples/zigbee/: CMakeLists.txt  main.cpp
cmake/: arm-none-eabi-gcc.cmake  embedded.cmake
docs/: architecture.rst  conf.py  index.rst  make.bat
hal/: AdcInterface.hpp  ClockInterface.hpp  EdgeTimeInterface.hpp  ExtintInterface.hpp  GpioInterface.hpp  I2cInterface.hpp  PwmInterface.hpp  SpiInterface.hpp  TimerInterface.hpp  UartInterface.hpp  WatchdogInterface.hpp  WirelessInterface.hpp  clock.hpp  extint.hpp  gpio.hpp  led.hpp  pinout.hpp  spi.hpp  stream.cpp  stream.hpp  types.hpp  uart.hpp
libs/: CMakeLists.txt
tools/pinout/: CMakeLists.txt  main.cpp
(+162 files in other folders)
